# openairinterface5g

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  NOTICE.md  NOTICE.txt  README.md  README.txt  SystemX-tutorial-design.md  SystemX-tutorial-design.odt  T.c  T.h  T_defs.h  T_messages.txt  d2d_emulator_setup.txt  diff_1206_2.txt  enb.fs6.example.conf  enb_dev.files  enb_dev.includes  generate_Txx.c  genids.c  ldpctest_BG_1_Zc_384_rate_1-3_block_length_8448_maxit_5.txt  main.c  maketags  oai5g_development.files  oai5g_development.includes  oaienv  open-nfapi.oai.patch  patch.diff  pre-commit  ray_enb_dev.files  ray_enb_dev.includes  rxsigF0.m  txsig0.m  (+1 more)
cmake_targets/at_commands/: CMakeLists.txt
cmake_targets/nas_sim_tools/: CMakeLists.txt
common/utils/T/tracer/: CMakeLists.txt  Makefile  Makefile.local  Makefile.remote  config.c  config.h  configuration.c  database.c  database.h  defs.h  enb.c  event.c  event.h  event_selector.c  event_selector.h  extract.c  extract_config.c  extract_input_subframe.c  extract_output_subframe.c  extract_prs_dumps.sh  forward.c  forward.h  gnb.c  gui.c  handler.c  local.c  macpdu2wireshark.c  main.c  multi.c  openair_logo.h  packet-mac-lte.h  record.c  remote.c  remote_old.c  replay.c  textlog.c  textlog.h  to_vcd.c  ue.c  utils.c  (+2 more)
common/utils/T/tracer/filter/: filter.c  filter.h
common/utils/T/tracer/gui/: Makefile  container.c  event.c  gui.c  gui.h  gui_defs.h  image.c  init.c  label.c  loop.c  notify.c  positioner.c  test.c  text_list.c  textlist.c  timeline.c  toplevel_window.c  widget.c  x.c  x.h  x_defs.h  xy_plot.c
common/utils/T/tracer/hacks/: Makefile  dump_nack_signal.c  time_meas.c  (+2 more)
common/utils/telnetsrv/: CMakeLists.txt  load_telnet.c  load_telnet.h  telnetsrv.c  telnetsrv.h  telnetsrv_5Gue_measurements.c  telnetsrv_CMakeLists.txt  telnetsrv_bearer.c  telnetsrv_ci.c  telnetsrv_cpumeasur_def.h  telnetsrv_enb_measurements.c  telnetsrv_enb_phycmd.c  telnetsrv_loader.c  telnetsrv_loader.h  telnetsrv_ltemeasur_def.h  telnetsrv_measurements.c  telnetsrv_measurements.h  telnetsrv_measurments.h  telnetsrv_phycmd.c  telnetsrv_phycmd.h  telnetsrv_proccmd.c  telnetsrv_proccmd.h  telnetsrv_rrc.c
common/utils/telnetsrv/DOC/: telnetaddcmd.md  telnetarch.md  telnetgetset.md  telnethelp.md  telnethist.md  telnetloader.md  telnetlog.md  telnetloop.md  telnetsrv.md  telnetusage.md
doc/: 5Gnas.md  Aerial_FAPI_Split_Tutorial.md  BASIC_SIM.md  BUILD.md  CMakeLists.txt  Doxyfile  E1-design.md  F1-design.md  FEATURE_SET.md  GET_SOURCES.md  ITTISIM.md  L1SIM.md  L2NFAPI.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  LDPC_T2_OFFLOAD_SETUP.md  NFAPI_archi.md  NR_NFAPI_archi.md  NR_SA_CN5G_gNB_B210_COTS_UE_Tutorial.md  NR_SA_CN5G_gNB_N300_COTS_UE_Tutorial.md  NR_SA_CN5G_gNB_USRP_COTS_UE_Tutorial.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  RUN_NR_NFAPI.md  RUN_NR_PRS.md  RUN_NR_multiple_BWPs.md  SW-archi-graph.md  SW_archi.md  SystemX-tutorial-design.md  TESTBenches.md  TESTING_5GSA_setup.md  TESTING_GNB_W_COTS_UE.md  UnitTests.md  cross-compile.md  environment-variables.md  nr-ue-design.md
doc/E1AP/: E1-design.md  e1ap_procedures.md
doc/dev_tools/: sanitizers.md
doc/episys/lte_mode_l2_emulator/: README.txt
doc/episys/nsa_mode_l2_emulator/: README.txt
doc/testbenches_doc_resources/: 5g-aw2s-bench.tex  5g-nsa-faraday-bench.tex  5g-ota-bench.tex
doc/testing_gnb_w_cots_ue_resources/: enb.conf  gnb.conf  oai_fr1_setup.vsdx
doc/tutorial_resources/: docker-compose-basic-nrf.yaml  oai_db.sql
doc/tutorial_resources/oai-cn5g/: docker-compose.yaml  docker-compose.yml
doc/tutorial_resources/oai-cn5g/conf/: config.yaml  oai-amf.conf  oai-ausf.conf  oai-nrf.conf  oai-smf.conf  oai-spgwu-tiny.conf  oai-udm.conf  oai-udr.conf
doc/tutorial_resources/oai-cn5g/database/: oai_db.sql
nfapi/oai_integration/aerial/: CMakeLists.txt  fapi_nvIPC.c  fapi_nvIPC.h  fapi_vnf_p5.c  fapi_vnf_p5.h  fapi_vnf_p7.c  fapi_vnf_p7.h
openair2/E2AP/RAN_FUNCTION/: CMakeLists.txt  init_ran_func.c  read_setup_ran.c  read_setup_ran.h
openair2/E2AP/RAN_FUNCTION/CUSTOMIZED/: CMakeLists.txt  ran_func_gtp.c  ran_func_gtp.h  ran_func_mac.c  ran_func_mac.h  ran_func_pdcp.c  ran_func_pdcp.h  ran_func_rlc.c  ran_func_rlc.h  ran_func_slice.c  ran_func_slice.h  ran_func_tc.c  ran_func_tc.h
openair2/E2AP/RAN_FUNCTION/O-RAN/: CMakeLists.txt  ran_e2sm_ue_id.c  ran_e2sm_ue_id.h  ran_func_kpm.c  ran_func_kpm.h  ran_func_kpm_subs.c  ran_func_kpm_subs.h  ran_func_rc.c  ran_func_rc.h  ran_func_rc_extern.h  ran_func_rc_subs.c  ran_func_rc_subs.h
openair2/LAYER2/nr_rlc/: CMakeLists.txt  asn1_utils.c  asn1_utils.h  nr_rlc_entity.c  nr_rlc_entity.h  nr_rlc_entity_am.c  nr_rlc_entity_am.h  nr_rlc_entity_tm.c  nr_rlc_entity_tm.h  nr_rlc_entity_um.c  nr_rlc_entity_um.h  nr_rlc_oai_api.c  nr_rlc_oai_api.h  nr_rlc_pdu.c  nr_rlc_pdu.h  nr_rlc_sdu.c  nr_rlc_sdu.h  nr_rlc_ue_manager.c  nr_rlc_ue_manager.h
openair2/LAYER2/nr_rlc/tests/: CMakeLists.txt  Makefile  exec_nr_rlc_test.sh  run_tests.sh  test.c
openair2/RRC/LTE/MESSAGES/: CMakeLists.txt  README.md  asn1_msg.c  asn1_msg.h  asn1_msg_NB_IoT.c  asn1_msg_NB_IoT.h
openair2/RRC/NR/MESSAGES/: CMakeLists.txt  asn1_msg.c  asn1_msg.h
openair3/GTPV1-U/: Makefile.am  Makefile.eNB  gtpv1u.h  gtpv1u_eNB.c  gtpv1u_eNB_defs.h  gtpv1u_eNB_task.h  gtpv1u_gNB.c  gtpv1u_gNB_defs.h  gtpv1u_gNB_task.h  gtpv1u_sgw_defs.h  gtpv1u_task.c  gtpv1u_teid_pool.c
openair3/GTPV1-U/nw-gtpv1u/src/: NwGtpv1u.c  NwGtpv1uMsg.c
radio/ETHERNET/: CMakeLists.txt  eth_raw.c  eth_udp.c  ethernet_lib.h
radio/ETHERNET/USERSPACE/LIB/: eth_udp.c  if_defs.h
radio/ETHERNET/benetel/4g/: CMakeLists.txt
radio/ETHERNET/benetel/5g/: CMakeLists.txt
radio/USRP/: CMakeLists.txt  README.md  usrp_lib.cpp
radio/USRP/USERSPACE/LIB/: usrp_lib.cpp
radio/fhi_72/: CMakeLists.txt  oaioran.c  oaioran.h  oran-config.c  oran-config.h  oran-init.c  oran-init.h  oran-params.h  oran.h  oran_isolate.c  oran_isolate.h
(+6743 files in other folders)
